feat: Agregado estado_contrato udistrital/argo_documentacion/issues/127
